After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688370 - GDBusError documentation improvement for client-side
GDBusError documentation improvement for client-side
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
2.35.x
Other Linux
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-11-15 08:32 UTC by Aleksander Morgado
Modified: 2012-11-15 21:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Suggested rewording (1.28 KB, patch)
2012-11-15 08:33 UTC, Aleksander Morgado
committed Details | Review

Description Aleksander Morgado 2012-11-15 08:32:08 UTC
The GDBusError section documentation says:

"With this setup, a D-Bus peer can transparently pass e.g. FOO_BAR_ERROR_ANOTHER_ERROR and other peers will see the D-Bus error name org.project.Foo.Bar.Error.AnotherError. If the other peer is using GDBus, the peer will see also FOO_BAR_ERROR_ANOTHER_ERROR instead of G_IO_ERROR_DBUS_ERROR. Note that GDBus clients can still recover org.project.Foo.Bar.Error.AnotherError using g_dbus_error_get_remote_error()."

But the truth is that having the peer using GDBus is not enough to get the DBus error name to GError conversion right: the client needs to explicitly register the error domain itself before attempting any DBus call. Which is actually obvious, but worth explicitly noting...
Comment 1 Aleksander Morgado 2012-11-15 08:33:46 UTC
Created attachment 229026 [details] [review]
Suggested rewording
Comment 2 David Zeuthen (not reading bugmail) 2012-11-15 15:39:47 UTC
Comment on attachment 229026 [details] [review]
Suggested rewording

Sounds good to me, thanks!
Comment 3 Aleksander Morgado 2012-11-15 21:25:53 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.