gdbus: improve documentation of the GDBusError section

https://bugzilla.gnome.org/show_bug.cgi?id=688370